...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/planner_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Planner"
            android:textSize="12sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Search"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mock_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Mock"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/validity"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mock_next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="MOCK NEXT"
                android:textSize="10sp" />

            <Button
                android:id="@+id/mock_back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Mock Back"
                android:textSize="10sp" />

            <Button
                android:id="@+id/turn_off_mocking_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refresh_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onRefreshClicked"
                android:text="Refresh Directions" />

            <Switch
                android:id="@+id/brief_directions_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:minHeight="48dp"
                android:onClick="onBriefDirectionsSwitch"
                android:text="Brief Directions" />

            <ImageButton
                android:id="@+id/reroute_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/maps_icon_direction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onNextClicked"
                android:text="Next" />

            <Button
                android:id="@+id/skip_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onSkipClicked"
                android:text="Skip" />

            <Button
                android:id="@+id/back_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onBackClicked"
                android:text="Back" />


        </LinearLayout>

        <TextView
            android:id="@+id/directions_text"
...
