...
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMapClicked"
                android:text="Map" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clearAllBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClearAllClicked"
                android:text="Clear All" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="SearchExhibits"
                android:onClick="onSearchClicked"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
...
